# boe-rag-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/rules/: typescript.md
.github/workflows/: ci.yml  deploy-frontend.yml  deploy-space.yml  refresh-corpus.yml
deploy/space/: README.md
docs/: DESIGN.md  EXPANSION_RUNBOOK.md  EXPLAINER.md  SECURITY.md  dataset_card.md  evalset_card.md
docs/media/: README.md
eval_data/: adversarial_security.jsonl  retrieval_baseline.json  seed_evalset.jsonl
frontend/: .gitignore  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: build-quality-data.mjs
frontend/src/: App.tsx  api.ts  quality.ts  styles.css  types.ts  vite-env.d.ts
frontend/src/components/: AblationTable.tsx  AnswerPanel.tsx  AskForm.tsx  AssistantView.tsx  MetricCard.tsx  QualityPage.tsx  SearchResults.tsx  SourceCard.tsx
reports/: e2e_baseline.json  e2e_baseline.md  evalset_silver_retrieval.json  evalset_silver_retrieval.md  finetune_result.md  qdrant_parity.md  retrieval_baseline.json  retrieval_baseline.md  retrieval_chunking.json  retrieval_chunking.md  retrieval_hybrid.json  retrieval_hybrid.md  retrieval_rerank.json  retrieval_rerank.md  security_eval.json  security_eval.md
scripts/: build_qdrant_index.py  check_eval_regression.py  compare_models.py  fetch_corpus.py  fetch_embeddings.py  finetune_embeddings.py  generate_evalset.py  ingest_corpus_years.py  inspect_corpus.py  precompute_embeddings.py  push_corpus_to_hub.py  push_embeddings_to_hub.py  push_evalset_to_hub.py  redeploy_space.py  refresh_corpus.py  run_chunking_ablation.py  run_e2e_eval.py  run_eval.py  run_rerank_ablation.py  run_retrieval_ablation.py  run_security_eval.py  split_evalset.py  warm_models.py
src/boe_rag/: __init__.py  config.py  models.py  settings.py
src/boe_rag/eval/: __init__.py  answerer.py  chunking.py  compare.py  cross_encoder.py  dataset.py  e2e.py  embedding.py  equivalence.py  generate.py  hybrid.py  judge.py  metrics.py  mine_pairs.py  qdrant_store.py  regression.py  report.py  rerank.py  retriever.py  runner.py  security.py  sparse.py  split.py  stats.py
src/boe_rag/ingest/: __init__.py  __main__.py  chunker.py  client.py  corpus.py  incremental.py  parser.py  pipeline.py  years.py
src/boe_rag/llm/: __init__.py  _http.py  base.py  factory.py  gemini.py  groq.py  openrouter.py
src/boe_rag/service/: __init__.py  api.py  app.py  citation.py  engine.py  models.py  safety.py  tracing.py  ui.py
tests/: conftest.py  test_chunker.py  test_chunking.py  test_citation.py  test_client.py  test_compare.py  test_corpus.py  test_engine_tracing.py  test_equivalence.py  test_eval_dataset.py  test_eval_regression.py  test_generate.py  test_incremental.py  test_ingest_years.py  test_judge_e2e.py  test_langfuse_tracing.py  test_llm_providers.py  test_metrics.py  test_mine_pairs.py  test_package.py  test_parser.py  test_pipeline.py  test_qdrant_store.py  test_report.py  test_rerank.py  test_retriever.py  test_safety.py  test_security.py  test_service.py  test_settings.py  test_sparse_hybrid.py  test_split.py  test_stats.py  test_ui.py
tests/fixtures/: document_simple.xml  document_structured.xml  sumario_sample.json
