[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boe-rag"
version = "0.1.0"
description = "Production-grade RAG assistant over the BOE (Spanish official state gazette) with an eval-driven pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Gonzalo López Crespo" }]
keywords = ["rag", "nlp", "spanish", "legal", "retrieval", "huggingface"]
dependencies = [
    "httpx==0.28.1",
    "pydantic==2.12.3",  # capped by gradio (ui extra); features used are basic v2
    "pydantic-settings==2.14.2",  # typed config + .env loading (boe_rag.settings)
    "tenacity==9.1.4",
    "pyarrow==24.0.0",
    "numpy==2.4.6",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.17",
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pre-commit==4.6.0",
    "fastapi==0.137.0",  # service layer; TestClient runs in CI without uvicorn
]
# Pinned <1.0 to stay compatible with the `ml` extra (sentence-transformers).
hub = [
    "huggingface-hub==0.36.2",
]
ml = [
    "sentence-transformers==5.1.2",
    # The cross-encoder ships a SentencePiece tokenizer with no tokenizer.json,
    # so transformers converts it on load and needs both of these at runtime.
    "sentencepiece==0.2.1",
    "protobuf==7.35.1",
]
# On-disk vector backend for the dense leg (Arc 5). Optional: the default
# serving path uses the in-memory NumPy index and never imports this.
qdrant = [
    "qdrant-client==1.16.1",
]
# Serving the FastAPI + Gradio app (e.g. on a Hugging Face Space).
api = [
    "fastapi==0.137.0",
    "uvicorn==0.49.0",
]
# The Gradio demo UI mounted on the FastAPI app. Heavy; install only to serve.
ui = [
    "gradio==5.50.0",
]
# Optional observability: export per-stage pipeline spans to Langfuse. Off by
# default (NoOpTracer); enabled only when the LANGFUSE_* env vars are set. Kept
# to the OpenTelemetry-based v3 line, which the tracing adapter targets.
obs = [
    "langfuse>=3.0.0,<4.0.0",
]

[project.scripts]
boe-ingest = "boe_rag.ingest.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/boe_rag"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific
    "D",   # pydocstyle
]
ignore = [
    "D203", # incompatible with D211 (blank line before class docstring)
    "D213", # incompatible with D212 (multi-line summary position)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D104"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
files = ["src/boe_rag", "tests"]
warn_unreachable = true
pretty = true

# Optional `ml`/`ui`/`obs`/`qdrant` extras: untyped or not installed in the
# default/CI env, so their imports are resolved leniently for the type-checker.
[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "gradio.*",
    "langfuse.*",
    "qdrant_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
